[gd_scene load_steps=7 format=2]

[ext_resource path="res://Enteties/Enemies/Scorpion/scorpion.gd" type="Script" id=1]
[ext_resource path="res://Enteties/Enemies/Scorpion/Sprites/scorpion-walk-2.png" type="Texture" id=2]
[ext_resource path="res://Enteties/Enemies/Scorpion/Sprites/scorpion-walk-1.png" type="Texture" id=3]
[ext_resource path="res://Enteties/Enemies/Scorpion/Sprites/scorpion-walk-3.png" type="Texture" id=4]
[ext_resource path="res://Enteties/Enemies/Scorpion/Sprites/scorpion-attack.png" type="Texture" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "move",
"speed": 12.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": false,
"name": "attack",
"speed": 5.0
} ]

[node name="Scorpion" type="KinematicBody2D"]
collision_layer = 2147483650
collision_mask = 9
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "move"

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -49.1365, 42.9452, 50.0283, 44.243, 32.9107, -27.314, 8.7778, -49.4826, -1.60498, -39.9417, -2.72743, 1.87002, -40.0493, 2.43125, -48.6911, 8.42284 )

[node name="DisableOutsideView" type="VisibilityEnabler2D" parent="."]
rect = Rect2( -30, 0, 60, 20 )
process_parent = true
physics_process_parent = true

[node name="FloorDetector" type="Node2D" parent="."]

[node name="Left" type="RayCast2D" parent="FloorDetector"]
modulate = Color( 0, 1, 0.0392157, 1 )
position = Vector2( -55, 40 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 8

[node name="Right" type="RayCast2D" parent="FloorDetector"]
modulate = Color( 0, 1, 0.0392157, 1 )
position = Vector2( 55, 40 )
enabled = true
cast_to = Vector2( 0, 10 )
collision_mask = 2147483656

[node name="KillerInstinct" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="KillerInstinct"]
modulate = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( -55.7638, 43.9623, 54.2375, 43.9623, 37.6812, -34.3294, 7.0941, -55.0949, -11.9877, -47.7989, -55.2025, 4.39556 )

[node name="PlayerRight" type="RayCast2D" parent="KillerInstinct"]
modulate = Color( 0.486275, 0.0941176, 0.0941176, 1 )
position = Vector2( 40, 30 )
rotation = -1.5708
enabled = true
cast_to = Vector2( 0, 200 )

[node name="PlayerLeft" type="RayCast2D" parent="KillerInstinct"]
modulate = Color( 0.486275, 0.0941176, 0.0941176, 1 )
position = Vector2( -40, 30 )
rotation = 1.5708
enabled = true
cast_to = Vector2( 0, 200 )
[connection signal="body_entered" from="KillerInstinct" to="." method="_on_KillerInstinct_body_entered"]
